Add action to enable showing hidden folders as it was in KDE3

BUG: 159702

svn path=/trunk/KDE/kdelibs/; revision=800882